--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^9.0.1",
+    "react-syntax-highlighter": "^15.5.0",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.0",
     "tailwind-merge": "^3.0.1",
@@ -61,6 +62,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "genkit-cli": "^1.6.1",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
